Lisit Visible Save button Solved

--- a/front_end/src/components/Rightsidebar/RightMain.scss
+++ b/front_end/src/components/Rightsidebar/RightMain.scss
@@ -20,6 +20,7 @@
     width:85%;
     margin-top:2rem;
     height:100%;
+    margin-bottom:5rem;
     
     
 
